--- a/iqengines-demo/AndroidManifest.xml
+++ b/iqengines-demo/AndroidManifest.xml
@@ -27,6 +27,7 @@
 
         <activity android:name=".HistoryActivity"
                   android:label="@string/app_name"
+                  android:launchMode="singleInstance"
                   android:screenOrientation="portrait">
         </activity>
         
